# freddy_single_arm_control

./: CMakeLists.txt  README.md
kinova_arm_control/: CMakeLists.txt  kinova_arm_control.cpp  motion_specification.yaml  parameters.yaml
kinova_arm_control/config/: impedance_gains.yaml  motion_specification.yaml  parameters.yaml
kinova_arm_control/src/: kinova_arm_control.cpp
